--- a/cases-de-sucesso.html
+++ b/cases-de-sucesso.html
@@ -21,7 +21,7 @@
         <nav class="menu">
             <a class="menu__links" href="index.html">HOME</a>
             <a class="menu__links" href="cases-de-sucesso.html">CASES</a>
-            <a class="menu__links" href="game-catch-the-cat">GAME CATCH THE CAT</a>
+            <a class="menu__links" href="game-catch-the-cat.html">GAME CATCH THE CAT</a>
             <a class="menu__links" href="cuide-do-seu-gato.html">CUIDE DO SEU GATO</a>
         </nav>
     </header>
