--- a/game-catch-the-cat.html
+++ b/game-catch-the-cat.html
@@ -35,7 +35,7 @@
             <p>Mas fique atento, eles podem estar em perigo, então não há tempo a perder. <strong>Você tem até 2 minutos para encontrá-los!</strong></p>
             <p>Encontre todos os gatinhos, use o clique do mouse para resgatá-los e passe para a próxima fase. 😊</p>
             <!-- CTAs -->
-            <div class="container__botoes">
+            <div class="container__buttons">
                 <a class="container__cta" href="#">
                     <img src="assets/jogar.png" alt="Começar o jogo">
                     PLAY</a> 
