--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Hoje, ela compartilha suas técnicas com seu irmão, Orion, fundando assim o grupo <strong>Lurion Catch the Cat!</strong></p> 
             <p class="container__texto-destaque">Para achar gatos, é só chamar os aussies!</p>
             <!-- CTAs -->
-            <div class="container__botoes">
+            <div class="container__buttons">
                 <a class="container__cta" href="cases-de-sucesso.html"">
                     <img src="assets/estrela.png" alt="portfolio">
                     Cases de Sucesso</a> 
