first version of the game

--- a/cases-de-sucesso.html
+++ b/cases-de-sucesso.html
@@ -48,20 +48,21 @@
             <div class="container__case hide" data-case="gata"> 
                 <div class="container__case_texto">
                     <h3>Conheça a Gata, encontrada na vila Jau, em Poá/SP.</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                    <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
-                    <p>Mais uma vez, o dia foi salvo graças a <strong>Lurion Catch the Cat! 😊 </strong></p> 
+                    <p>Gata decidiu que sua vida doméstica era entediante e optou pela aventura. Com um salto desajeitado, ela fugiu, deixando sua humana perplexa. Desesperada, a humana buscou ajuda na <strong>Lurion Catch the Cat! 😊 </strong></p>
+                    <p>Os Aussies entraram em ação, munidos de varinhas de penas na ponta e biscoitos como isca, eles fizeram reconhecimento nas vielas da cidade, prateleira de um mercado e outros esconderijos da redondeza.</p>
+                    <p>Gata, sempre um passo à frente, deslizava entre as patinhas dos detetives...</p>
+                    <p>Finalmente, após uma perseguição digna de um filme de ação felina, ela foi cercada. Os detetives usaram sua arma secreta: um laser vermelho irresistível. Encantada, ela abandonou sua fuga e se rendeu ao fascínio do raio luminoso.</p>
                 </div>
                 <img class="container__case__img" src="./assets/case-gata.png" alt="Essa é a Gata, felina de 14 anos encontrada na vila Jau, em Poá/SP.">
             </div>
             <div class="container__case hide" data-case="milkway">   
                 <div class="container__case_texto">      
-                    <h3>Conheça a Gata, encontrada na vila Milkway, encontrada no interior de São Paulo</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                    <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
-                    <p>Mais uma vez, o dia foi salvo graças a <strong>Lurion Catch the Cat! 😊 </strong></p> 
+                    <h3>Conheça a Milkway, encontrada no interior de São Paulo.</h3>
+                    <p>Milkway, a gata caseira, sempre se contentou em observar o mundo da janela do apartamento. Porém, quando a porta se abriu acidentalmente, ela se viu diante da tentação da liberdade e fugiu.</p>
+                    <p>Seus donos, em pânico, acionaram a <strong>Lurion Catch the Cat! 😊 </strong></p> 
+                    <p>Os aussies criaram um plano infalível: usando um robô em forma de rato com petiscos irresistíveis, atraíram Milkway para uma área segura. Desconfiada, desviou-se do rato e subiu em uma árvore.</p>
+                    <p>Com habilidades de pastoreio, os Aussies formaram um cerco gentil ao redor da árvore e conquistaram a confiança de Milkway.</p>
+                    <p>Num movimento coordenado, os Aussies guiaram ela de volta para casa e os donos, aliviados, celebraram o resgate bem-sucedido.</p>
                 </div>
                 <img class="container__case__img" src="./assets/case-milk.png" alt="Essa é a Milkway, mais conhecida como Milk, que foi encontrada no interior de São Paulo.">
             </div>
@@ -76,10 +77,11 @@
             </div>
         </section>
 
-        <script type="text/javascript" src="next.js"></script>
+        <script type="text/javascript" src="js/prevnext.js"></script>
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lurion Corp 2023.</p>
     </footer>
 </body>
 </html>
+
