--- a/cuide-do-seu-gato.html
+++ b/cuide-do-seu-gato.html
@@ -11,6 +11,7 @@
     
     <link rel="stylesheet" href="./estilos/normalize.css">
     <link rel="stylesheet" type="text/css" href="./estilos/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./estilos/cuide-do-seu-animal.css" media="screen" />
 
     <link rel="canonical" href="https://www.lurion.com.br">
     <link rel="icon" href="./assets/favicon.ico">
@@ -26,15 +27,63 @@
         </nav>
     </header>
     <main class="container">
-        <section class="container__content">
-            <!-- Titulos -->
-            <h1>Manual do gato</h1>
-            <h2>Cuidados básicos ao trazer um felino à família</h2>
-            <!-- Texto central -->
-            <p><strong>Gateiros de primeira viagem,</strong> os aussies prepararam algumas dicas e responderam curiosidades para auxiliar as novas famílias de gatos a cuidar bem de seus bichanos. ❤️</p>
+        <section>
+            <div class="container__content_dicas">
+                <div class="container__content_dicas_textos">
+                    <!-- Titulos -->
+                    <h1>Manual do gato</h1>
+                    <h2>Cuidados básicos ao trazer um felino à família</h2>
+                    <!-- Texto central -->
+                    <p><strong>Gateiros de primeira viagem,</strong> os aussies prepararam algumas dicas e responderam curiosidades para auxiliar as novas famílias de gatos a cuidar bem de seus bichanos. ❤️</p>
+                </div>
+                <img class="container__dicas__img" src="./assets/manual-do-gato.png" alt="Como lidar com o gato: um meme.">
+            </div>
+            <div class="container__content_dicas_lista">
+                <ol>
+                    <li>
+                        <strong>1. Um cantinho pra chamar de seu</strong><br/>
+                        Antes da chegada do gato, é bom que ele tenha um lugar confortável e seguro da casa para se acomodar, mas é importante saber que eles gostam de explorar lugares escuros e fechados como gavetas, armários ou caixas, por isso alguns momentos de “sumiço” serão comuns. 
+                    </li>
+                    <li>
+                        <strong>2. Segurança em primeiro lugar</strong><br/>
+                        Justamente por esse instinto explorador dos felinos, é preciso preparar a casa visando a segurança do animal. Todas as janelas devem ser gradeadas (eles não costumam se atirar, mas entre pulos podem acontecer acidentes graves) e deve-se bloquear locais perigosos para entrar – como máquinas de lavar e ambientes muito fechados – ou subir, como armários muito altos.
+                    </li>
+                    <li>
+                        <strong>3. Visita ao Veterinário</strong><br/>
+                        Agende uma visita ao veterinário assim que possível, ele é o profissional capacitado para realizar avaliações clínicas completas no pet. A vacinação e Vermifugação são essenciais para proteger contra doenças, pois permite que o organismo crie defesas para reagir contra vírus, bactérias e vermes. Ele também dará conselhos específicos para a raça e a idade do gato.<br/>
+                        <img src="./assets/vacina-gatos.png" alt="Guia de Vacinação para Gatos">
+                    </li>
+                    <li>
+                        <strong>4. Alimentação Adequada</strong><br/>
+                        Escolha uma dieta de alta qualidade, adaptada à idade e às necessidades específicas do gato. Mantenha uma rotina consistente de alimentação, evitando mudanças bruscas que possam causar desconforto digestivo.
+                    </li>
+                    <li>
+                        <strong>5. Identificação e Microchip</strong><br/>
+                        Coloque uma coleira de identificação com um sino para alertar sobre sua presença. Considere a instalação de um microchip para garantir que, em caso de fuga, seu gato possa ser identificado e devolvido com segurança.
+                    </li>
+                    <li>
+                        <strong>6. Caixa de Areia Adequada</strong><br/>
+                        Proporcione uma caixa de areia limpa e acessível. A limpeza regular é fundamental para evitar que o gato evite usá-la. Considere uma caixa adicional para casas com múltiplos felinos.
+                    </li>
+                    <li>
+                        <strong>7. Enriquecimento Ambiental</strong><br/>
+                        Gatos são animais curiosos e ativos. Forneça brinquedos, arranhadores e locais elevados para explorar, ajudando a manter seu felino mentalmente estimulado e fisicamente saudável.
+                    </li>
+                    <li>
+                        <strong>8. Introdução Gradual a Outros Animais</strong><br/>
+                        Se você já tem outros animais de estimação, faça apresentações graduais e supervisionadas. Dê tempo para que todos se acostumem uns aos outros antes de permitir interações livres.
+                    </li>
+                    <li>
+                        <strong>9. Check-ups Regulares</strong><br/>
+                        Agende check-ups veterinários regulares para monitorar a saúde do gato ao longo do tempo. Detectar problemas precocemente pode levar a tratamentos mais eficazes.
+                    </li>
+                    <li>
+                        <strong>10. Seguro de Saúde</strong><br/>
+                        Considere a possibilidade de adquirir um seguro de saúde para o seu gato. Isso pode ajudar a cobrir custos inesperados de tratamentos médicos e garantir que seu felino receba o melhor cuidado possível.
+                    </li>
+                </ol>
+            </div>
         </section>
-        <!-- Decoração -->
-        <img class="container__img-destaque" src="./assets/manual-do-gato.png" alt="Como lidar com o gato: um meme.">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lurion Corp 2023.</p>
