--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>os aussies vão te ajudar!</h2>
             <!-- Texto central -->
             <p>Tudo começou com um amor por gatos! <3</p> 
-            <p>Lua, a primogênita, sempre foi fascinada por esses bichanos e foi essa paixão que a transformou em uma grande caçadora de gatos.</p>
+            <p>Lua sempre foi fascinada por esses bichanos e foi essa paixão que a transformou em uma grande caçadora de gatos.</p>
             <p>Hoje, ela compartilha suas técnicas com seu irmão, Orion, fundando assim o grupo <strong>Lurion Catch the Cat!</strong></p> 
             <p class="container__texto-destaque">Para achar gatos, é só chamar os aussies!</p>
             <!-- CTAs -->
